@@ -198,6 +198,7 @@ public class Reliquist extends Thief
 		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Prayer_ImprovedWardingGlyph",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Prayer_SenseParish",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"Thief_BlendIn",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),16,"ImprovedAlchemy",false,CMParms.parseSemicolons("Alchemy(50)",true));
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),17,"Skill_Attack2",0,false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),17,"Thief_FalseFaith",0,true); // disguise faith
