@@ -17,6 +17,28 @@ liquid base to start from.  Also, the player must have mastered \
 the spell or prayer before attempting to brew a potion from it. \
 Lastly, the player will lose some experience for brewing the potion.
 
+IALCHEMY=IMPROVEDALCHEMY
+IMPROVED_ALCHEMY=IMPROVEDALCHEMY
+IBREW=IMPROVEDALCHEMY
+IMPROVEDALCHEMY=<ABILITY>\
+Usage    : IBREW (LIST) [POTION NAME] [CONTAINER] ([LEVEL])\n\r\
+Example  : ibrew heal flask\n\r\
+         : ibrew heal flask 20\n\r\
+:        : ibrew list\n\r\
+:        : ibrew list cure\n\r\
+:        : ibrew list 5-10\n\r\
+:        : ibrew list all\n\r\
+This skill allows the player to brew a potion from one of the \
+spells or prayers the player knows, and to determine its potency \
+by specifying the level of the potion.  To do this, the player must \
+have a glass drinking container to make the potion out of.  Many \
+potions require ingredients, and all require water or some other \
+liquid base to start from.  Also, the player must have mastered \
+the spell or prayer before attempting to brew a potion from it. \
+The level that the player can set the brew potency at is bound by the \
+lowest level of the spell, and the level of the caster. \ 
+Lastly, the player will lose some experience for brewing the potion.
+
 ANIMALBOND=ANIMAL_BONDING
 ANIMALBONDING=ANIMAL_BONDING
 ANIMAL_BONDING=<ABILITY>\
