@@ -1,0 +1,128 @@
+Spell_IronGrip	IRON	POTION
+Spell_InsatiableThirst	SALT WATER	POTION
+Spell_ResistMagicMissiles	SCALES	POTION
+Spell_MagicalAura	MILK	POTION
+Spell_Shield	BRASS	POTION
+Spell_Blur	COTTON	POWDER
+Spell_Blur	BLOOD	POTION
+Spell_Infravision	CARROTS	POTION
+Spell_DetectUndead	PEPPERS	POTION
+Spell_ObscureSelf	MILK	POTION
+Spell_ResistPoison	ORANGES	POTION
+Spell_Clog	STONE	POTION
+Spell_DeadenSmell	TOMATOES	POTION
+Spell_DetectMetal	TIN	POTION
+Spell_ResistGas	BERRIES	POTION
+Spell_Deafness	CORN	POTION
+Spell_FeatherFall	FEATHERS	POTION
+Spell_Sleep	SAND	POWDER
+Spell_Hunger	POTATOES	POTION
+Spell_DetectWater	WATER	POTION
+Spell_ResistAcid	MILK	POTION
+Spell_WaterBreathing	SEAWEED	POTION
+Spell_DetectMagic	MAPLE	POTION
+Spell_DetectGold	GOLD	POTION
+Spell_Spook	BLOOD	POTION
+Spell_ResistCold	FUR	POTION
+Spell_WeaknessGas	MARBLE	POTION
+Spell_DispelMagic	AQUAMARINE	POTION
+Spell_FaerieFire	FLINT	POTION
+Spell_WeaknessAcid	LEMONS	POTION
+Spell_DetectInvisible	EGGS	POTION
+Spell_ResistElectricity	OAK	POTION
+Spell_GraceOfTheCat	GREENS	POTION
+Spell_WeaknessCold	CLAY	POTION
+Spell_Invisibility	GLASS	POTION
+Spell_LightSensitivity	ZINC	POTION
+Spell_Tourettes	HOPS	POTION
+Spell_ManaBurn	MUTTON	POTION
+Spell_ResistFire	SCALES	POTION
+Spell_DetectHidden	TOPAZ	POTION
+Spell_WeaknessElectricity	IRONWOOD	POTION
+Spell_ResistDisease	APPLES	POTION
+Spell_Fear	DATES	POTION
+Spell_WeaknessFire	HICKORY	POTION
+Spell_Blindness	FLINT	POTION
+Spell_ComprehendLangs	HICKORY	POTION
+Spell_Slow	PORK	POTION
+Spell_ResistArrows	IRON	POTION
+Spell_Mute	CHRYSOBERYL	POTION
+Spell_Feeblemind	POULTRY	POTION
+Spell_Stoneskin	GRANITE	POTION
+Spell_Laughter	OLIVES	POTION
+Spell_Weaken	WATER	POTION
+Spell_ChangeSex	BONE	POTION
+Spell_Haste	COFFEEBEANS	POTION
+Spell_Confusion	FISH	POTION
+Spell_Delirium	BEEF	POTION
+Spell_Fly	FEATHERS	POTION
+Spell_ResistParalyzation	BERRIES	POTION
+Spell_GiantStrength	GREENS	POTION
+Spell_Frenzy	COFFEEBEANS	POTION
+Spell_Nondetection	JADE	POTION
+Spell_Advancement	PLATINUM	POTION
+Spell_Hold	OBSIDIAN	POTION
+Spell_Blink	GEM	POTION
+Spell_Polymorph	WHEAT	POTION
+Spell_Choke	CACTUS	POTION
+Spell_MageClaws	BONE	POTION
+Spell_MindFog	COAL	POTION
+Spell_FreeMovement	BLOOD	POTION
+Spell_Delude	SILVER	POTION
+Spell_ResistPetrification	GARNET	POTION
+Spell_FleshStone	STONE	POTION
+Spell_ImprovedInvisibility	GLASS	POTION
+Spell_Nightmare	BLOOD	POTION
+Spell_Immunity	MITHRIL	POTION
+Spell_MindBlock	BALSA	POTION
+Spell_LowerResists	RICE	POTION
+Spell_CombatPrecognition	STEEL	POTION
+Spell_Frailty	CLAY	POTION
+Spell_Anchor	LEAD	POTION
+Spell_Disintegrate	COCOA	POTION
+Prayer_CureLight	WATER	POTION
+Prayer_CureFatigue	WATER	POTION
+Prayer_MinorInfusion	SALT WATER	POTION
+Prayer_RestoreSmell	WATER	POTION
+Prayer_SenseEvil	SALT WATER	POTION
+Prayer_SenseLife	SALT WATER	POTION
+Prayer_SenseGood	SALT WATER	POTION
+Prayer_ProtEvil	WATER	POTION
+Prayer_ProtUndead	WATER	POTION
+Prayer_ProtGood	BLOOD	POTION
+Prayer_CureDeafness	WATER	POTION
+Prayer_Deafness	BLOOD	POTION
+Prayer_CureSerious	WATER	POTION
+Prayer_CureExhaustion	WATER	POTION
+Prayer_CauseSerious	BLOOD	POTION
+Prayer_ModerateInfusion	SALT WATER	POTION
+Prayer_Bless	WATER	POTION
+Prayer_Curse	BLOOD	POTION
+Prayer_Freedom	WATER	POTION
+Prayer_ProtParalyzation	WATER	POTION
+Prayer_Paralyze	BLOOD	POTION
+Prayer_SenseInvisible	SALT WATER	POTION
+Prayer_SenseMagic	SALT WATER	POTION
+Prayer_RestoreVoice	WATER	POTION
+Prayer_SenseHidden	SALT WATER	POTION
+Prayer_ProtPoison	WATER	POTION
+Prayer_Poison	BLOOD	POTION
+Prayer_RemovePoison	WATER	POTION
+Prayer_CureDisease	WATER	POTION
+Prayer_ProtDisease	WATER	POTION
+Prayer_Plague	BLOOD	POTION
+Prayer_Sanctuary	WATER	POTION
+Prayer_ProtectHealth	WATER	POTION
+Prayer_BloodMoon	BLOOD	POTION
+Prayer_CureCritical	WATER	POTION
+Prayer_CauseCritical	BLOOD	POTION
+Prayer_HolyAura	WATER	POTION
+Prayer_GreatCurse	BLOOD	POTION
+Prayer_CureBlindness	WATER	POTION
+Prayer_Blindsight	SALT WATER	POTION
+Prayer_Blindness	BLOOD	POTION
+Prayer_ProtectElements	WATER	POTION
+Prayer_Heal	WATER	POTION
+Prayer_Harm	BLOOD	POTION
+Prayer_Invigorate	WATER	POTION
+Prayer_MajorInfusion	SALT WATER	POTION
