@@ -27,6 +27,7 @@
  35. Nwe items: GenCaravan, a land-based sailing ship, and GenGangline, for making mob follower teams
  36. New common skill: CaravanBuilding, for, well, building caravans.
  37. Magic Powders can now be sniffed to self-enchant
+ 38. New common skill: Improved Alchemy
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
